--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "js-tokens": "^4.0.0",
-    "react": "^18.2.0",
-    "loose-envify": "^1.4.0"
+    "loose-envify": "^1.4.0",
+    "react": "^18.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.10.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
