--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "프론트 엔드 개발 환경 공부 레파지토리",
   "main": "index.js",
   "dependencies": {
+    "css-loader": "^3.6.0",
+    "file-loader": "^5.0.2",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^3.0.0"
   },
   "devDependencies": {
     "webpack": "^4.46.0",
