--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "프론트 엔드 개발 환경 공부 레파지토리",
   "main": "index.js",
   "dependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-transform-arrow-functions": "^7.18.6",
+    "@babel/plugin-transform-block-scoping": "^7.18.9",
+    "@babel/plugin-transform-strict-mode": "^7.18.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^5.0.2",
