--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@babel/plugin-transform-arrow-functions": "^7.18.6",
     "@babel/plugin-transform-block-scoping": "^7.18.9",
     "@babel/plugin-transform-strict-mode": "^7.18.6",
+    "@babel/preset-env": "^7.19.0",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^2.6.12",
     "css-loader": "^3.6.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
