--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url-loader": "^3.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.23.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0"
   },
