--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.12",
     "css-loader": "^3.6.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.3",
     "js-tokens": "^4.0.0",
+    "lint-staged": "^10.0.7",
     "loose-envify": "^1.4.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "style-loader": "^2.0.0",
     "url-loader": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
+    "eslint-config-prettier": "^6.15.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0"
   },
@@ -41,5 +46,13 @@
   "bugs": {
     "url": "https://github.com/hojae-lee/FrontDevEnv/issues"
   },
-  "homepage": "https://github.com/hojae-lee/FrontDevEnv#readme"
+  "homepage": "https://github.com/hojae-lee/FrontDevEnv#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
+  }
 }
