--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
   "devDependencies": {
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^6.15.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint src --fix",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
