--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@babel/plugin-transform-block-scoping": "^7.18.9",
     "@babel/plugin-transform-strict-mode": "^7.18.6",
     "@babel/preset-env": "^7.19.0",
+    "axios": "^0.19.2",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^3.0.0",
+    "connect-api-mocker": "^1.7.0",
     "core-js": "^2.6.12",
     "css-loader": "^3.6.0",
     "eslint-plugin-prettier": "^3.4.1",
@@ -38,7 +40,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "lint": "eslint src --fix",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --progress"
   },
   "repository": {
     "type": "git",
