--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^3.0.0",
     "connect-api-mocker": "^1.7.0",
+    "copy-webpack-plugin": "^5.1.1",
     "core-js": "^2.6.12",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.6.0",
     "eslint-plugin-prettier": "^3.4.1",
     "file-loader": "^5.0.2",
@@ -24,9 +26,11 @@
     "lint-staged": "^10.0.7",
     "loose-envify": "^1.4.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^2.3.2",
     "url-loader": "^3.0.0"
   },
   "devDependencies": {
@@ -38,7 +42,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "cross-env NODE_ENV=production webpack --progress",
     "lint": "eslint src --fix",
     "start": "webpack-dev-server --progress"
   },
